Java - GC 알고리즘 알아보기!